20/08/2014:
	- Cleanup to IIIF code and some cosmetic improvements to generated JSON.
	- Added string escape function to URL class and moved all environment variable access to
	  Main.cc.


19/08/2014:
	- Added aspect ratio flag in View.h for use in CVT.cc. Also cleaned up Main.cc to remove
	  unnecesary logging and record extra http headers.
	- Added IIIF protocol version 2.0 support via the IIIF argument.


13/08/2014:
	- The rotate filter only ever operates on 8bit data, so remove if else type statements from
	  function - increases average function speed by about around 15%.
	- Added missing URL.h to src/Makefile.am.
	- Refactored JTL into 2 separate functions: run (parses arguments) & send (performs tile
	  request, processing and sending). Allows this to be re-used in other functions, such as
	  Zoomify.cc etc.
	- Refactored CVT similarly to JTL with now a separate send() function.


11/08/2014:
	- Renamed variable bpp in IIPImage and its derived classes to bpc (bits per channel),
	  which is more logical and how we have named things elsewhere.
	- Modification to TileManager, which was requesting more tiles than necessary for regions.
	- Changes to View.cc to make WID and HEI requests with region exports produce images with a
	  *final* size of that requested by WID or HEI. For example RGN=0.1,0.1,0.5,0.5&WID=500 will
	  now produce an image of 500px in width rather than extract the region from an image of size
	  500px wide. CVT also cleaned up.


06/08/2014:
	- Updated exception handling to use std::invalid_argument and a new derived file_error
	  exception within the IIPImage and derived classes. Allows better distinguishing between
	  HTTP status errors.
	- Moved URL decoding code from FIF.cc to separate URL class in URL.h.


05/08/2014:
	- Added flip function to Transforms.
	- Modified JTL, DeepZoom, Zoomify and CVT to avoid float conversion if not required.
	- Converted bilinear and nearest neighbour resize code to unsigned char to avoid