@@ -1,3 +1,7 @@
+21/08/2014:
+	- Fixes to allow compilation on older versions of gcc.
+
+
 20/08/2014:
 	- Cleanup to IIIF code and some cosmetic improvements to generated JSON.
 	- Added string escape function to URL class and moved all environment variable access to
